# Corsac-Engine

./: .gitignore  CMakeLists.txt  README.md  go.mod  install.bat  makefile
Engine/Program/CorsacManager/: install.bat
Engine/Source/Developer/STL/include/Corsac/: algorithm.h  allocator.h  assert.h  chrono.h  compressed_pair.h  fixed_function.h  fixed_tuple_vector.h  fixed_vector.h  functional.h  initializer_list.h  iterator.h  memory.h  numeric_limits.h  random.h  ratio.h  stack.h  tuple.h  tuple_vector.h  type_traits.h  unique_ptr.h  utility.h  vector.h
Engine/Source/Developer/STL/include/Corsac/Base/: base.h  compiler.h  compiler_traits.h  have.h  platform.h
Engine/Source/Developer/STL/include/Corsac/STL/: config.h  fixed_pool.h  function.h  function_detail.h  functional_base.h  help_copy.h  help_fill.h  help_move.h  mem_fn.h  (+8 more)
Engine/Source/Developer/STL/test/: main_test.cpp  type_compound_test.h  type_fundamental_test.h  type_pod_test.h  type_properties_test.h  type_traits_test.h  type_transformation_test.h  vector_test.h
Engine/Source/Developer/benchmark/: main.cpp
Engine/Source/Editor/Manager/: CMakeLists.txt  fileTemplates.h  flagsParser.h  manager.cpp
cmd/ce2d/: main.go
internal/NewGame/: Game.go
internal/NewGame/Comp/: Animation.go  Colider.go  Sprite.go  Transform.go  Types.go
internal/NewGame/Scene/: Main.go
internal/NewGame/System/: Animated.go  Collision.go  ControlPlayer.go  Renderer.go  TestPoligon.go  Translate.go
internal/TestGame/: Entities.go  Game.go  Main.go
internal/ce2d_ecs/: Animation.go  Control.go  ECS.go  SDLRender.go  Transform.go
internal/component/: Control.go  SMAnimation.go  Sprite.go  Transform.go  Types.go
internal/system/: Draw.go  KeyboardController.go  PlayerControl.go  StopMotion.go  Translate.go
pkg/Event/: event.go
pkg/GUI/: gui.go
pkg/Math/: dlist.go  list.go
pkg/NewECS/: components.go  entity.go
pkg/NewECS/examples/: main.go
pkg/Resourcer/: audio.go
pkg/ce2d_collision/: QuadTree.go  RectTree.go  Сollision.go
pkg/ce2d_error/: ErrorState.go  ErrorStruct.go
pkg/ce2d_math/: HashMap.go  Matrices.go  list.go  vector.go
pkg/ce2d_quadTree/: QuadTree.go
pkg/ce2d_video/: Manager.go  Texture.go
pkg/ecs/: component.go  ecs.go  entity.go  event.go  group.go  matcher.go  pool.go  system.go  todo.md
pkg/ecs new/: ecs.go  entity.go  list.go  system.go
pkg/ecs new/examples/: main.go
pkg/ecs/examples/: main.go
pkg/gdl/: audio.go  font.go  gameloop.go  scene.go  sprite.go  texture.go  window.go
pkg/newecs/: component.go  entity.go  group.go  matcher.go  pool.go  system.go  todo.md
pkg/newecs/examples/: main.go
pkg/rm/: audio.go  font.go  gameloop.go  rm.go  sprite.go  texture.go
src/ECS/: CMakeLists.txt  entity.go  main.go
src/ECS/include/: Entity.h
src/ECS/test/: CMakeLists.txt  test_main.cpp
src/SML/: CMakeLists.txt  window.go
src/SML/include/: loader.h  window.h  winwindow.h
src/SML/src/: winwindow.cpp
src/STL/: CMakeLists.txt
src/STL/include/: algorithm.h  allocator.h  allocator_malloc.h  functional.h  initializer_list.h  iterator.h  memory.h  numeric_limits.h  random.h  slice.h  sparse_set.h  static_vector.h  type_traits.h  utility.h  vector.h
src/STL/include/Corsac/: algorithm.h  allocator.h  call_traits.h  chrono.h  compressed_pair.h  functional.h  initializer_list.h  iterator.h  memory.h  numeric_limits.h  random.h  ratio.h  sparse_set.h  string.h  string_view.h  type_traits.h  utility.h  vector.h
src/STL/include/Corsac/internal/: char_traits.h  config.h  copy_help.h  fill_help.h  function.h  function_detail.h  function_help.h  functional_base.h  generic_iterator.h  integer_sequence.h  memory_base.h  move_help.h  tuple_fwd_decls.h  type_compound.h  type_fundamental.h  type_transformation.h
src/STL/include/Corsac/internal/base/: compiler.h  compiler_traits.h  have.h  platform.h
src/STL/include/internal/: config.h  copy_help.h  fill_help.h  function.h  function_detail.h  function_help.h  functional_base.h  in_place_t.h  integer_sequence.h  mem_fn.h  memory_base.h  move_help.h  piecewise_construct_t.h  tuple_fwd_decls.h  type_compound.h  type_fundamental.h  type_pod.h  type_properties.h  type_transformation.h
src/STL/include/internal/base/: base.h  compiler.h  compiler_traits.h  have.h
src/STL/src/: allocator_malloc.cpp  slice.cpp
src/STL/test/: CMakeLists.txt  test_main.cpp  type_compound_test.h  type_fundamental_test.h  type_pod_test.h  type_properties_test.h  type_traits_test.h  type_transformation_test.h  vector_test.h
src/app/: CMakeLists.txt  window.go
src/app/include/: window.h
src/app/src/: window.cpp
src/benchmark/: benchmark.h
src/ce2dgo/internal/NewGame/: Game.go
src/ce2dgo/internal/NewGame/Comp/: Colider.go  Player.go  Types.go
src/ce2dgo/internal/NewGame/System/: Animated.go  Collision.go  TestPoligon.go  Translate.go
src/ce2dgo/pkg/App/: app.go
src/ce2dgo/pkg/Event/: event.go
src/ce2dgo/pkg/GUI/: gui.go
src/ce2dgo/pkg/NewECS/: group.go  matcher.go  pool.go
src/ce2dgo/pkg/Resourcer/: font.go  resourcer.go  texture.go
src/ce2dgo/pkg/ce2d_error/: ErrorManager.go
src/ce2dgo/pkg/ce2d_math/: Figure.go  HashMap.go  doublyList.go  utills.go
src/ce2dgo/pkg/ecs/: group.go  todo.md
src/ce2dgo/pkg/ecs/examples/: main.go
src/cl/frontend/: Cargo.toml
src/cl/frontend/src/: lib.rs  main.rs
src/ecs/: CMakeLists.txt  component.go  group.go  system.go
src/ecs/include/: allocator.h  slice.h  type_traits.h
src/ecs/include/internal/: config.h  copy_help.h  fill_help.h  generic_iterator.h  type_compound.h  type_fundamental.h  type_pod.h  type_transformations.h
src/ecs/include/internall/: type_compound.h  type_fundamental.h  type_traits.h  type_transformation.h
src/ecs/include/internall/base/: base.h  compiler.h  platform.h
src/ecs/src/: allocator.cpp  slice.cpp
src/ecs/test/: CMakeLists.txt  test_main.cpp  types.h  types_compound_test.h  types_fundamental_test.h  types_traits_test.h
src/engine/: CMakeLists.txt  main.cpp
src/engine/include/: Test.h  Token.h
src/test/: Test.h  _.swp  main.cpp  makefile  test
