[package]
name = "frontend"
version = "0.1.0"
authors = ["Lirik-Keltran <keltran.987@gmail.com>", "Faldor <fe.offep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cl"
path = "src/lib.rs"

[[bin]]
name = "econom_model"
path = "src/main.rs"

[dependencies]
colored = "2"

